Extra padding to avoid overlapping content

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
   line-height: 1.6;
   background: #2f2f4f;
   color: #dfdfdf;
-  padding-bottom: 50px;
+  padding-bottom: 100px;
 }
 
 header {
